package com.miguelrodriguez19.safecube.feature.auth.presentation

object AuthTestTags {
    const val WELCOME_SCREEN = "auth_welcome_screen"
    const val WELCOME_LOGIN_ACTION = "auth_welcome_login_action"
    const val LOGIN_SCREEN = "auth_login_screen"
}
